Refactor streams to use toList() method (#2122)
With Java 17 `.collect(Collectors.toList())` can be written as `.toList()`