@@ -3,7 +3,6 @@ package io.openems.edge.app.loadcontrol;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import org.osgi.service.cm.ConfigurationAdmin;
 import org.osgi.service.component.ComponentContext;
@@ -120,7 +119,7 @@ public class ThresholdControl extends AbstractEnumOpenemsApp<Property> implement
 								.isMulti(true) //
 								.setOptions(this.componentUtil.getAllRelays() //
 										.stream().map(r -> r.relays).flatMap(List::stream) //
-										.collect(Collectors.toList())) //
+										.toList()) //
 								.onlyIf(relays != null, t -> t.setDefaultValue(//
 										JsonUtils.buildJsonArray() //
 												.add(relays[0]) //
